--- a/main.ipynb
+++ b/main.ipynb
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
     "\n",
     "df_amazon_num = df_amazon[['stars', 'reviews', 'price', 'boughtInLastMonth']]\n",
     "\n",
-    "corr_matrix = df_amazon_num.corr()\n",
+    "corr_matrix = df_amazon_num.corr(method='spearman')              # Por defecto es Pearson, pero puedo poner otros -> .corr(method='spearman')   \n",
     "\n",
     "sns.heatmap(corr_matrix, annot=True, cmap=\"coolwarm\")"
    ]
